# 2048

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: config.c  config.h  data.h  direction.c  direction.h  game.c  game.h  game_sdl_handler.c  game_sdl_handler.h  main.c  sdl_assets.c  sdl_assets.h  sdl_game.c  sdl_game.h  sdl_main.c  sdl_main.h  sdl_menu.c  sdl_menu.h  sdl_score.c  sdl_score.h  sdl_utils.c  sdl_utils.h  utils.c  utils.h
src/gfx/: SDL2_gfxPrimitives.c  SDL2_gfxPrimitives.h  SDL2_gfxPrimitives_font.h  SDL2_rotozoom.c  SDL2_rotozoom.h
